--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,5 @@
 # Set to production when deploying
-# NODE_ENV=development
-NODE_ENV=production
+NODE_ENV=development
 
 PORT=7999
 
@@ -9,4 +8,4 @@ GA_ID=UA_XXXXXX
 
 # Set this if you plan on hosting at a path (ex http://mldangelo.github.io/personal-site/)
 # defaults to no base path if variable is not set. Be sure to include initial /
-BASE_PATH=https://mingdixie.github.io/personal-website/
+BASE_PATH=/mingdixie.github.io/personal-website/
